# policy-crawler

./: .env.example  .gitignore  README.md  Top think tanks.xlsx  pyproject.toml  pyrightconfig.json  ruff.toml  vercel.json
.github/workflows/: ci.yml  daily.yml  weekly.yml
data/: profile.yaml  sources.yaml
docs/: 00-overview.md  01-architecture.md  02-personal-context.md  03-tech-stack.md  04-conventions.md  STATUS.md
docs/handoffs/: 2026-05-24-step-02-database.md  AGENT-CONTINUATION-PROMPT.md
docs/steps/: 01-scaffolding.md  02-database.md  03-source-registry.md  04-crawler-framework.md  05-preference-and-ranker.md  06-email-digest.md  07-vote-endpoint-and-webapp.md  08-orchestration.md  09-source-discovery.md  10-preference-self-update.md  11-observability-and-guardrails.md
handoffs/: 05-live-scoring-verification.md
migrations/: 0001_init.sql  0002_consumed_tokens_and_profile_versions.sql  0002_sources_unique.sql  0003_add_fetcher_kinds.sql  0004_camoufox_and_weekly.sql  _apply.py
src/policy_crawler/: config.py  db.py  models.py  run.py  seed.py
src/policy_crawler/crawler/: ashby.py  base.py  camoufox_llm.py  dedupe.py  detect.py  generic_html.py  greenhouse.py  lever.py  manual.py  (+10 more)
tests/: test_db.py  test_db_retry.py  test_run_wrapper.py  test_seed.py  test_smoke.py
tests/cassettes/: test_ashby_returns_jobs.yaml  test_rippling_returns_jobs.yaml
tests/crawler/: conftest.py  test_ashby.py  test_camoufox_llm.py  test_dedupe.py  test_detect.py  test_greenhouse.py  test_lever.py  test_normalize.py  test_rippling.py  test_run.py  test_title_filter.py  test_workable.py
tests/digest/: test_compose.py  test_template.py  test_tokens.py
tests/discovery/: test_discovery.py
tests/ranker/: test_pass1.py  test_pass2.py  test_profile.py  test_run.py  test_schemas.py
tests/self_update/: test_apply_diff.py  test_propose.py  test_run.py  test_summarize.py
tests/webapp/: conftest.py  test_inbox.py  test_profile.py  test_sources.py  test_votes.py
(+45 files in other folders)
