[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-crawler"
version = "0.1.0"
description = "Daily crawler + LLM ranker that surfaces top policy / research postings via email digest."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Victor Ehrnrooth" }]
dependencies = [
    "httpx~=0.27",
    "selectolax~=0.3",
    "pydantic~=2.8",
    "pydantic-settings~=2.4",
    "python-dotenv~=1.0",
    "psycopg[binary,pool]~=3.2",
    "pyyaml~=6.0",
    # ruamel.yaml (not just pyyaml) preserves comments + key ordering when the
    # weekly self-update patches data/profile.yaml — see self_update/apply_diff.py.
    "ruamel.yaml~=0.18",
    "structlog~=24.1",
    # anthropic SDK intentionally not ~=-pinned: per docs/03-tech-stack.md we
    # want bug fixes and new-model support; pin here only if a regression bites.
    "anthropic>=0.40",
    "jinja2~=3.1",
    "fastapi~=0.115",
    "uvicorn~=0.30",
    "resend~=2.0",
    "python-multipart~=0.0.9",
    "tenacity~=9.0",
    "feedparser~=6.0",
    "markdownify~=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-vcr~=1.0",
    "pytest-asyncio~=0.24",
    "ruff~=0.6",
    "pyright~=1.1",
    "freezegun~=1.5",
    "respx~=0.21",
]
# Tier-2 long-tail fetcher. Kept out of the default install so a fresh
# `pip install -e .[dev]` does not pull down a browser toolchain. After install,
# run `python -m camoufox fetch` once to download the patched Firefox binary.
camoufox = ["camoufox[geoip]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"policy_crawler.digest" = ["templates/*.j2"]
"policy_crawler.webapp" = ["templates/**/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
